--- a/JenkinsFile
+++ b/JenkinsFile
@@ -30,7 +30,7 @@ pipeline {
         stage('Run Application') {
             steps {
                 // Start the JAR application
-                sh 'mvn exec:java -Dexec.mainClass=com.example.App'           }
+                sh 'mvn exec:java -Dexec.mainClass=org.Application.App'           }
         }
 
         
