--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
  
  
-  <name>MyMavenApp2</name>
+  <name>MavenGradleMigration</name>
   <url>http://maven.apache.org</url>
  
   <!-- Properties: Customize Java version or plugin versions -->
