--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven'
 group = 'org.Application'
 version = '1.0-SNAPSHOT'
 
-description = """MyMavenApp2"""
+description = """MavenGradleMigration"""
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
